syntax = "proto3";
package com.sukolenvo.checker.test;

service TestService {
  rpc Unary (UnaryRequest) returns(UnaryResponse);
}

message UnaryRequest {
  message UnaryRequestStatus {
  }
}

message UnaryResponse {

}