syntax = "proto3";
package com.sukolenvo.checker.test;

enum UnusedEnum {
  UNUSED_ENUM_UNSPECIFIED = 0;
}